<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/menuPadding">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/formMargin"
            android:layout_marginTop="@dimen/iconPadding"
            android:layout_marginRight="@dimen/formMargin"
            android:layout_marginBottom="@dimen/iconPadding"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/formMargin"
                    android:paddingRight="@dimen/formMargin"
                    android:textColor="@color/defaultTextColor"
                    android:textColorHint="@color/defaultHintTextColor"
                    android:textSize="@dimen/H3">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formMargin"
                        android:paddingTop="@dimen/iconPadding"
                        android:paddingBottom="@dimen/iconPadding"
                        android:text="@string/user_name"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />
                    <com.fuwafuwa.workflow.ui.ClearEditText
                        android:id="@+id/et_usrname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableRight="@drawable/search_clear_btn"
                        android:gravity="right"
                        android:hint="@string/placeholder_username"
                        android:singleLine="true"
                        android:textColor="@color/defaultTextColor"
                        android:textColorHint="@color/defaultHintTextColor"
                        android:textSize="@dimen/H3" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_top_line"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/formMargin"
                    android:paddingRight="@dimen/formMargin"
                    android:textColor="@color/defaultTextColor"
                    android:textColorHint="@color/defaultHintTextColor"
                    android:textSize="@dimen/H3">

                    <TextView
                        android:layout_width="120dp"
                        android:layout_height="40dp"
                        android:layout_gravity="top"
                        android:layout_marginRight="@dimen/formMargin"
                        android:gravity="center_vertical"
                        android:paddingTop="@dimen/iconPadding"
                        android:paddingBottom="@dimen/iconPadding"
                        android:text="@string/password"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <com.fuwafuwa.workflow.ui.ClearEditText
                        android:id="@+id/et_passwort"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/iconPadding"
                        android:layout_marginBottom="@dimen/iconPadding"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:drawableRight="@drawable/search_clear_btn"
                        android:gravity="right"
                        android:hint="@string/placeholder_pwd"
                        android:inputType="textPassword"
                        android:textColor="@color/defaultTextColor"
                        android:textColorHint="@color/defaultHintTextColor"
                        android:textSize="@dimen/H3" />
                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>

